Added a details page, some styling. Still pretty ugly

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<h1> A Sofia Leon Production </h1>
+<div class='dog-adoption__body'>
+    <router-outlet></router-outlet>
+  </div>
 
-
-<router-outlet></router-outlet>
