Now it's looking prettier, nothing is really changing though...

--- a/src/app/dogs/dogs.component.html
+++ b/src/app/dogs/dogs.component.html
@@ -1,1 +1,46 @@
-<p>dogs works!</p>
+<h1 class='dogs__headline mdc-typography--headline2'>
+  Featured pets
+</h1>
+
+
+<div class='dogs__container'>
+    <mat-card
+      class='dogs__card'
+      *ngFor='let dog of dogs'
+    >
+      <img mat-card-image src='{{dog.imgPath}}' alt='image of {{dog.name}}' />
+      <mat-card-title class='mdc-typography--headline6'>
+        {{dog.name}}
+      </mat-card-title>
+      <mat-card-subtitle>
+        {{dog.nickname}}
+      </mat-card-subtitle>
+  
+      <mat-card-actions>
+        <button
+          mat-icon-button
+          aria-label="Example icon-button with a heart icon"
+          *ngIf="dog.favorite"
+        >
+          <mat-icon
+            class='dog__card__favorite'
+            (click)="dog.favorite = !dog.favorite"
+          >
+            favorite
+          </mat-icon>
+        </button>
+        <button
+          mat-icon-button
+          aria-label="Example icon-button with a heart icon"
+          *ngIf="!dog.favorite"
+        >
+          <mat-icon
+            class='dog__card__favorite'
+            (click)="dog.favorite = !dog.favorite"
+          >
+            favorite_border
+          </mat-icon>
+        </button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
