Added home and submit button, added details page and a way to see details of your submission

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
-<h1> A Sofia Leon Production </h1>
+<button [routerLink] = "['']"> Home </button>
+<button routerLink = "/new-dog"> Submit Dog </button>
 <div class='dog-adoption__body'>
     <router-outlet></router-outlet>
   </div>
+
+  
 
