--- a/src/app/dogs/dogs.component.html
+++ b/src/app/dogs/dogs.component.html
@@ -7,6 +7,7 @@
     <mat-card
       class='dogs__card'
       *ngFor='let dog of dogs'
+      [routerLink] = "['/details',dog.name]"
     >
       <img mat-card-image src='{{dog.imgPath}}' alt='image of {{dog.name}}' />
       <mat-card-title class='mdc-typography--headline6'>
@@ -24,7 +25,7 @@
         >
           <mat-icon
             class='dog__card__favorite'
-            (click)="dog.favorite = !dog.favorite"
+            (click)="dog.favorite = !dog.favorite;$event.stopPropagation()"
           >
             favorite
           </mat-icon>
@@ -36,7 +37,7 @@
         >
           <mat-icon
             class='dog__card__favorite'
-            (click)="dog.favorite = !dog.favorite"
+            (click)="dog.favorite = !dog.favorite;$event.stopPropagation()"
           >
             favorite_border
           </mat-icon>
