all the changes

--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -1,4 +1,5 @@
-<div class='details__container'>
+
+<div class='details__container' *ngIf="dog">
     <div class='details__media'>
       <img src='{{dog.imgPath}}' alt='image of {{dog.name}}'/>
     </div>
