--- a/src/app/dogs/dogs.component.html
+++ b/src/app/dogs/dogs.component.html
@@ -1,13 +1,50 @@
-<h1 class='dogs__headline mdc-typography--headline2'>
+<div class='dogs__form-field'>
+  <mat-form-field class='dogs__text-field'>
+    <input
+      matInput
+      placeholder='Search for pets...'
+      [(value)]="searchValue"
+      (keyup)='onKey($event)'
+    />
+  </mat-form-field>
+</div>
+
+<h1 *ngIf='!searchValue' class='dogs__headline mdc-typography--headline2'>
   Featured pets
 </h1>
+
+<div *ngIf='searchValue'>
+    <h2 class='mdc-typography--headline5'>
+      Results for "{{searchValue}}"
+    </h2>
+  
+    <div class='dogs__filters'>
+        <mat-form-field class='dogs__filter'>
+          <mat-label>Breed</mat-label>
+          <mat-select
+            (selectionChange)="onBreedChange($event.value)"
+            [(value)]="filteredBreed"
+          >
+            <mat-option
+              *ngFor='let breed of breeds'
+              value='{{breed}}'
+            >
+              {{breed | titlecase}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+    </div>
+  
+
+
 
 
 <div class='dogs__container'>
     <mat-card
       class='dogs__card'
       *ngFor='let dog of dogs'
-      [routerLink] = "['/details',dog.name]"
+      [routerLink] = "['/details',dog.id]"
     >
       <img mat-card-image src='{{dog.imgPath}}' alt='image of {{dog.name}}' />
       <mat-card-title class='mdc-typography--headline6'>
