--- a/src/app/dogs/dogs.component.scss
+++ b/src/app/dogs/dogs.component.scss
@@ -1,9 +1,26 @@
 .dogs__container {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-column-gap: 8px;
-    grid-row-gap: 16px;
-  }
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-column-gap: 8px;
+  grid-row-gap: 16px;
+}
+
+.dogs__filters {
+  display: flex;
+  margin-bottom: 8px;
+}
+
+.dogs__filter {
+  margin-right: 8px;
+}
+
+.dogs__form-field {
+  text-align: center;
+}
+
+.dogs__text-field {
+  width: 50vw;
+}
   
   .dog__card__favorite {
     fill: red;
@@ -13,3 +30,7 @@
   .dogs__headline {
     margin-bottom: 16px;
   }
+
+
+  
+  
