Fixed search bug

--- a/src/app/dogs/dogs.component.html
+++ b/src/app/dogs/dogs.component.html
@@ -7,7 +7,7 @@
       (keyup)='onKey($event)'
     />
   </mat-form-field>
-
+</div>
 
 <h1 *ngIf='!searchValue' class='dogs__headline mdc-typography--headline2'>
   Featured pets
