--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!-- <link href = 'src/styles.scss' rel = 'stylesheet'> -->
-  <mat-toolbar color = "primary">
+<body mat-app-background>
+<mat-toolbar color = "primary">
    
   <mat-menu #appMenu="matMenu" color = "primary">
    <button mat-menu-item routerLink = "/">Home</button>  
@@ -28,6 +29,5 @@
 <div class='dog-adoption__body'>
     <router-outlet></router-outlet>
   </div>
-
-  
+</body> 
 
